Bug 97956 - Logitech G933 Gaming Wireless Headset: BUG: triggered 'if (axnum >= dev->valuator->numAxes)'
Summary: Logitech G933 Gaming Wireless Headset: BUG: triggered 'if (axnum >= dev->val...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-28 04:25 UTC by John5788
Modified: 2016-10-23 22:27 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-describe for Logitech G933 (5.86 KB, text/plain)
2016-09-28 04:25 UTC, John5788
no flags Details
evtest output for Logitech G933 (3.47 KB, text/plain)
2016-10-20 04:57 UTC, John5788
no flags Details

Description John5788 2016-09-28 04:25:11 UTC
Created attachment 126820 [details]
evemu-describe for Logitech G933

I am seeing the same problem as in bug 89473

[    16.196] (**) Logitech Logitech G933 Gaming Wireless Headset: always reports core events
[    16.196] (**) evdev: Logitech Logitech G933 Gaming Wireless Headset: Device: "/dev/input/event14"
[    16.196] (--) evdev: Logitech Logitech G933 Gaming Wireless Headset: Vendor 0x46d Product 0xa5b
[    16.196] (--) evdev: Logitech Logitech G933 Gaming Wireless Headset: Found absolute axes
[    16.196] (--) evdev: Logitech Logitech G933 Gaming Wireless Headset: Found absolute multitouch axes
[    16.196] (II) evdev: Logitech Logitech G933 Gaming Wireless Headset: No buttons found, faking one.
[    16.196] (--) evdev: Logitech Logitech G933 Gaming Wireless Headset: Fake MT device detected
[    16.196] (--) evdev: Logitech Logitech G933 Gaming Wireless Headset: Found keys
[    16.196] (II) evdev: Logitech Logitech G933 Gaming Wireless Headset: Forcing relative x/y axes to exist.
[    16.196] (II) evdev: Logitech Logitech G933 Gaming Wireless Headset: Configuring as mouse
[    16.196] (II) evdev: Logitech Logitech G933 Gaming Wireless Headset: Configuring as keyboard
[    16.196] (**) evdev: Logitech Logitech G933 Gaming Wireless Headset: YAxisMapping: buttons 4 and 5
[    16.196] (**) evdev: Logitech Logitech G933 Gaming Wireless Headset: EmulateWheelButton: 4, EmulateWheelInertia: 10, EmulateWheelTimeout: 200
[    16.196] (**) Option "config_info" "udev:/sys/devices/pci0000:00/0000:00:14.0/usb3/3-14/3-14.4/3-14.4:1.3/0003:046D:0A5B.0006/input/input14/event$
[    16.196] (II) XINPUT: Adding extended input device "Logitech Logitech G933 Gaming Wireless Headset" (type: KEYBOARD, id 9)
[    16.196] (**) Option "xkb_rules" "evdev"
[    16.196] (EE) BUG: triggered 'if (axnum >= dev->valuator->numAxes)'
[    16.196] (EE) BUG: /var/tmp/portage/x11-base/xorg-server-1.18.4/work/xorg-server-1.18.4/Xi/exevents.c:2103 in InitValuatorAxisStruct()
[    16.196] (EE)
[    16.196] (EE) Backtrace:
[    16.196] (EE) 0: /usr/bin/X (xorg_backtrace+0x56) [0x589af6]
[    16.196] (EE) 1: /usr/bin/X (InitValuatorAxisStruct+0x67) [0x51bd17]
[    16.196] (EE) 2: /usr/lib64/xorg/modules/input/evdev_drv.so (0x7f9a08d39000+0x53c5) [0x7f9a08d3e3c5]
[    16.196] (EE) 3: /usr/lib64/xorg/modules/input/evdev_drv.so (0x7f9a08d39000+0x58af) [0x7f9a08d3e8af]
[    16.196] (EE) 4: /usr/lib64/xorg/modules/input/evdev_drv.so (0x7f9a08d39000+0x7653) [0x7f9a08d40653]
[    16.196] (EE) 5: /usr/bin/X (ActivateDevice+0x4a) [0x42a58a]
[    16.196] (EE) 6: /usr/bin/X (0x400000+0x83579) [0x483579]
[    16.196] (EE) 7: /usr/bin/X (0x400000+0x954ab) [0x4954ab]
[    16.196] (EE) 8: /usr/bin/X (0x400000+0x95a93) [0x495a93]
[    16.196] (EE) 9: /usr/bin/X (config_init+0x9) [0x494929]
[    16.196] (EE) 10: /usr/bin/X (InitInput+0xbb) [0x477b8b]
[    16.196] (EE) 11: /usr/bin/X (0x400000+0x39601) [0x439601]
[    16.196] (EE) 12: /lib64/libc.so.6 (__libc_start_main+0xf0) [0x7f9a0f267630]
[    16.196] (EE) 13: /usr/bin/X (_start+0x29) [0x423939]
[    16.196] (EE)
[    16.196] (II) evdev: Logitech Logitech G933 Gaming Wireless Headset: initialized for absolute axes.
[    16.196] (**) Logitech Logitech G933 Gaming Wireless Headset: (accel) keeping acceleration scheme 1
[    16.196] (**) Logitech Logitech G933 Gaming Wireless Headset: (accel) acceleration profile 0
[    16.196] (**) Logitech Logitech G933 Gaming Wireless Headset: (accel) acceleration factor: 2.000
[    16.196] (**) Logitech Logitech G933 Gaming Wireless Headset: (accel) acceleration threshold: 4

Attached is the evemu-describe for this device.

I also have a keyboard that produces this error in the log as well. Should I also attach this to the bug report?
Comment 1 John5788 2016-09-28 04:28:51 UTC
I forgot to mention that I am running Gentoo with xf86-input-evdev-2.10.3
Comment 2 Peter Hutterer 2016-10-19 02:10:25 UTC
if you run evemu-device <recordings file> do you see the bug appear too? This seems to work fine here, so I'm wondering if the recording skipped some axes..
Comment 3 John5788 2016-10-19 08:31:18 UTC
No, if I feed the evemu-describe file into evemu-device, nothing happens:

# evemu-describe /dev/input/event13 > g933.log
# evemu-device g933.log 
Logitech Logitech G933 Gaming Wireless Headset: /dev/input/event18
^C
Comment 4 Peter Hutterer 2016-10-19 21:30:30 UTC
can you run evtest against the device and attach the output here? I wonder if there's a bug in evemu that doesn't catch the full device description or so
Comment 5 John5788 2016-10-20 04:57:45 UTC
Created attachment 127415 [details]
evtest output for Logitech G933
Comment 6 Peter Hutterer 2016-10-20 23:37:20 UTC
Rightyo, turns out there was an off-by-one error in evemu so it didn't record that last axis. Fix for evemu is here:
https://lists.freedesktop.org/archives/input-tools/2016-October/001343.html
Comment 7 Peter Hutterer 2016-10-20 23:56:29 UTC
https://patchwork.freedesktop.org/patch/117143/
Comment 8 Peter Hutterer 2016-10-23 22:27:54 UTC
commit 7251e42dfbac11eb1619b0a3881ee463b6d76c95
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Oct 21 09:42:23 2016 +1000

    Fix off-by-one error counting axes


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.